--- a/carerooms-core/src/main/resources/messages.properties
+++ b/carerooms-core/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ error.authorization.reason.userNotFound=Your email and/or password is not correc
 error.authorization.reason.locked=Your account has been locked. Please contact your account administrator
 error.authorization.reason.notActive=Your account is inactive. Please contact your account administrator
 error.authorization.reason.pending=Please verify your email to complete registration
+error.property.person.dbsExpiration.empty=The dbs expiration is required.
+error.property.person.dbsExpiration.inPast=The dbs expiration is in the past. Not allowed.
